# pico-c-template

./: .gitignore  README.md
my_project/: .clangd  CMakeLists.txt  main.c
